[gd_scene load_steps=12 format=2]

[ext_resource path="res://sprite/Замок/Sprite-0011.png" type="Texture" id=1]
[ext_resource path="res://sprite/новый интерфейс/Кубок.png" type="Texture" id=2]
[ext_resource path="res://ШРИФТ/new_dynamicfont.tres" type="DynamicFont" id=3]
[ext_resource path="res://sprite/блоки/background/pine2-export.png" type="Texture" id=4]
[ext_resource path="res://sprite/блоки/background/pine1-export.png" type="Texture" id=5]
[ext_resource path="res://sprite/блоки/background/cloud-export.png" type="Texture" id=6]
[ext_resource path="res://sprite/блоки/background/mountain2-export.png" type="Texture" id=7]
[ext_resource path="res://sprite/блоки/background/sky-export.png" type="Texture" id=8]
[ext_resource path="res://sprite/Замок/Sprite-0001.png" type="Texture" id=9]
[ext_resource path="res://level.gd" type="Script" id=10]
[ext_resource path="res://sprite/новый интерфейс/Back.png" type="Texture" id=11]

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="StaticBody2D" type="StaticBody2D" parent="."]
__meta__ = {
"_edit_lock_": true
}

[node name="Sky-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 142.438 )
scale = Vector2( 0.125948, 0.137855 )
texture = ExtResource( 8 )
__meta__ = {
"_edit_lock_": true
}

[node name="Mountain2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 400, 224 )
scale = Vector2( 0.12064, 0.156496 )
texture = ExtResource( 7 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pine1-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 304 )
scale = Vector2( 0.119767, 0.0976353 )
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="Pine2-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 416, 344 )
scale = Vector2( 0.121512, 0.0562814 )
texture = ExtResource( 4 )
__meta__ = {
"_edit_lock_": true
}

[node name="Cloud-export" type="Sprite" parent="StaticBody2D"]
position = Vector2( 407, 115 )
scale = Vector2( 0.120702, 0.120702 )
texture = ExtResource( 6 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureButton" type="TextureButton" parent="."]
margin_left = 43.0
margin_top = 51.0
margin_right = 183.0
margin_bottom = 211.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="TextureButton4" type="TextureButton" parent="."]
margin_left = 507.0
margin_top = 51.0
margin_right = 647.0
margin_bottom = 211.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="TextureButton3" type="TextureButton" parent="."]
margin_left = 351.0
margin_top = 51.0
margin_right = 491.0
margin_bottom = 211.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="TextureButton2" type="TextureButton" parent="."]
margin_left = 197.0
margin_top = 51.0
margin_right = 337.0
margin_bottom = 211.0
texture_normal = ExtResource( 1 )
texture_pressed = ExtResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = 47.0
margin_top = 56.0
margin_right = 180.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 1"

[node name="Label7" type="Label" parent="."]
margin_left = 509.0
margin_top = 56.0
margin_right = 642.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 4"

[node name="Label5" type="Label" parent="."]
margin_left = 352.0
margin_top = 56.0
margin_right = 492.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 3"

[node name="Label3" type="Label" parent="."]
margin_left = 198.0
margin_top = 56.0
margin_right = 338.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 2"

[node name="Label9" type="Label" parent="."]
margin_left = 198.0
margin_top = 56.0
margin_right = 338.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 2"

[node name="Label2" type="Label" parent="."]
margin_left = 272.0
margin_top = 134.0
margin_right = 296.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label4" type="Label" parent="."]
margin_left = 125.0
margin_top = 134.0
margin_right = 149.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label11" type="Label" parent="."]
margin_left = 721.0
margin_top = 134.0
margin_right = 745.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label8" type="Label" parent="."]
margin_left = 571.0
margin_top = 134.0
margin_right = 595.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label6" type="Label" parent="."]
margin_left = 424.0
margin_top = 134.0
margin_right = 448.0
margin_bottom = 176.0
custom_fonts/font = ExtResource( 3 )
text = "0"

[node name="Label10" type="Label" parent="."]
margin_left = 656.0
margin_top = 56.0
margin_right = 796.0
margin_bottom = 98.0
custom_fonts/font = ExtResource( 3 )
text = "Level 5"

[node name="Кубок" type="Sprite" parent="."]
position = Vector2( 76, 150 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Кубок5" type="Sprite" parent="."]
position = Vector2( 690, 150 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Кубок4" type="Sprite" parent="."]
position = Vector2( 537, 150 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Кубок3" type="Sprite" parent="."]
position = Vector2( 387, 150 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Кубок2" type="Sprite" parent="."]
position = Vector2( 238, 150 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )

[node name="Sprite-0011" type="Sprite" parent="."]
position = Vector2( 267, 130 )
texture = ExtResource( 1 )

[node name="Sprite-0015" type="Sprite" parent="."]
position = Vector2( 724, 130 )
texture = ExtResource( 1 )

[node name="Sprite-0013" type="Sprite" parent="."]
position = Vector2( 578, 131 )
texture = ExtResource( 1 )

[node name="Sprite-0014" type="Sprite" parent="."]
position = Vector2( 726, 131 )
texture = ExtResource( 1 )

[node name="Sprite-0012" type="Sprite" parent="."]
position = Vector2( 420, 131 )
texture = ExtResource( 1 )

[node name="Sprite-0001" type="Sprite" parent="."]
position = Vector2( 271, 159 )
scale = Vector2( 0.685714, 0.685714 )
texture = ExtResource( 9 )

[node name="Sprite-0002" type="Sprite" parent="."]
position = Vector2( 420, 159 )
scale = Vector2( 0.685714, 0.685714 )
texture = ExtResource( 9 )

[node name="Sprite-0003" type="Sprite" parent="."]
position = Vector2( 582, 159 )
scale = Vector2( 0.685714, 0.685714 )
texture = ExtResource( 9 )

[node name="Sprite-0004" type="Sprite" parent="."]
position = Vector2( 582, 159 )
scale = Vector2( 0.685714, 0.685714 )
texture = ExtResource( 9 )

[node name="Sprite-0005" type="Sprite" parent="."]
position = Vector2( 733, 159 )
scale = Vector2( 0.685714, 0.685714 )
texture = ExtResource( 9 )

[node name="НАЗАД" type="TextureButton" parent="."]
margin_left = 18.0
margin_top = 285.0
margin_right = 91.0
margin_bottom = 358.0
rect_scale = Vector2( 1.4, 1.4 )
texture_normal = ExtResource( 11 )
texture_pressed = ExtResource( 11 )
expand = true

[connection signal="pressed" from="TextureButton" to="." method="_on_TextureButton_pressed"]
[connection signal="pressed" from="НАЗАД" to="." method="_on__pressed"]
